export survey works