@@ -22,7 +22,7 @@ public class MoodRatingQuestion {
 
     public static MoodRatingQuestion questionFromDBString(String encodedString) {
         String[] decodedInfo = StringEncodeUtil.decode(encodedString);
-        return new MoodRatingQuestion(decodedInfo[0], new Integer(decodedInfo[1]));
+        return new MoodRatingQuestion(decodedInfo[0], Integer.valueOf(decodedInfo[1]));
     }
 
     public MoodRatingQuestion(String question, int answer) {
